feat: mint user view (#252)
* chore: sat lowercase

* chore(settings): add temporary mint view toggle

* chore: add bill/list_all endpoint

* chore: generalize read/write mint config

* chore: load all local bills in mint view

* chore: find bill by id in mint view

* chore: show request to mint in mint view

* chore: display bill in mint request

* chore: fix issues in DiscountForm

* chore: i18n in DiscountForm

* chore: discount form on mint request

* chore: open discount form on click of input

* chore: button label

* chore: accept mint in mint view

* chore: close confirm drawer on accept quote error

* chore: display current bill holder

* chore: display maturity date on mint request

* chore: add loading state to refresh button

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -26,8 +26,6 @@
   "Create new identity": "Create new identity",
   "Date range": "Date range",
   "Dates": "Dates",
-  "Days": "Days",
-  "Discount": "Discount",
   "Discount rate": "Discount rate",
   "Edit": "Edit",
   "Email address": "Email address",
@@ -35,7 +33,6 @@
   "Enter app": "Enter app",
   "Forgot your PIN?": "Forgot your PIN?",
   "Full name": "Full name",
-  "Gross amount": "Gross amount",
   "Home": "Home",
   "I agree to the Terms and conditions": "I agree to the Terms and conditions",
   "Identity document": "Identity document",
@@ -48,12 +45,10 @@
   "Legal full name": "Legal full name",
   "Locale": "Locale",
   "Make it easier to create bills with colleagues from your company": "Make it easier to create bills with colleagues from your company",
-  "Mark up": "Mark up",
   "Maturity": "Maturity",
   "Mint": "Mint",
   "Mint a bill": "Mint a bill",
   "Name, address, email": "Name, address, email...",
-  "Net amount": "Net amount",
   "New bill": "New bill",
   "New identity": "New identity",
   "No bills issued yet": "No bills issued yet",
@@ -68,7 +63,6 @@
   "Person": "Person",
   "Personal identity": "Personal identity",
   "Please check if all the details are correct before proceeding": "Please check if all the details are correct before proceeding",
-  "Please enter a valid value between {min} and {max}.": "Please enter a valid value between 0 and 99.9999.",
   "Please enter a valid value.": "Please enter a valid value.",
   "Please fill in your personal details, all details are handled confidentially": "Please fill in your personal details, all details are handled confidentially",
   "Postal address": "Postal address",
@@ -119,6 +113,8 @@
   "bill.actions.payment.check": "Check payment",
   "bill.actions.requestAcceptance": "Request to accept",
   "bill.actions.requestAcceptance.error": "Request failed",
+  "bill.actions.requestAcceptance.error.description": "Error while accepting quote!",
+  "bill.actions.requestAcceptance.error.title": "Error!",
   "bill.actions.requestAcceptance.success": "Request sent successfully",
   "bill.actions.requestPayment": "Request payment",
   "bill.actions.requestPayment.error": "Request failed",
@@ -175,9 +171,15 @@
   "bill.mint.request.reject": "Reject",
   "bill.mint.request.selectMint": "Select a mint",
   "bill.mint.request.title": "Request to mint",
+  "bill.mint.request.toast.error.description": "Error while generating quote!",
+  "bill.mint.request.toast.error.title": "Error!",
+  "bill.mint.request.toast.success.description": "Successfully generated quote!",
+  "bill.mint.request.toast.success.title": "Success!",
   "bill.mint.requestToMint": "Request to mint",
   "bill.mint.selectQuote": "Select a quote",
   "bill.mint.title": "Mint quotes",
+  "bill.mintRequest.discountRate.label.text": "Discount Rate",
+  "bill.mintRequest.netAmount.label.text": "Net amount",
   "bill.offer.buyer": "Payment from",
   "bill.offer.id": "Sell bill",
   "bill.offer.payment.address": "Address to pay",
@@ -379,6 +381,14 @@
   "contacts.select.title": "Select contact",
   "contacts.view.title": "View contact",
   "contacts.zipCode": "Zip code",
+  "discountForm.days.label.text": "Days",
+  "discountForm.daysInput.error.text": "Please enter a valid value between {min} and {max}.",
+  "discountForm.discount.label.text": "Discount",
+  "discountForm.discountRate.error.text": "Please enter a valid value between {min} and {max}.",
+  "discountForm.discountRate.label.text": "Discount rate",
+  "discountForm.grossAmount.label.text": "Gross amount",
+  "discountForm.markUp.label.text": "Mark up",
+  "discountForm.netAmount.label.text": "Net amount",
   "displayRange.days": "{value} Days",
   "displayRange.oneYear": "1 Year",
   "displayRange.selectRange": "Select range",
