chore: fix address displayed in personal identity

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -134,6 +134,9 @@
   "bill.card.payer": "Payer",
   "bill.card.placeOfPayment": "Place of payment",
   "bill.card.status": "Status:",
+  "bill.create.orderOf": "to the order of",
+  "bill.create.payee": "Payee",
+  "bill.create.payer": "Payer",
   "bill.create.preview.details.billOfExchange": "Against this bill of exchange",
   "bill.create.preview.details.drawer": "Drawer",
   "bill.create.preview.details.noProtest": "No protest.",
