--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -4,6 +4,7 @@
   "Against the sum of": "Against the sum of",
   "Against this bill of exchange": "Against this bill of exchange",
   "All": "All",
+  "All contacts": "All contacts",
   "Authorised signer": "Authorised signer",
   "Bill issuer": "Bill issuer",
   "Bills": "Bills",
@@ -69,6 +70,8 @@
   "Preview": "Preview",
   "Preview company": "Preview company",
   "Preview identity": "Preview identity",
+  "Recent": "Recent",
+  "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
   "Registration date": "Registration date",
   "Registration date (MM/DD/YYYY)": "Registration date (MM/DD/YYYY)",
@@ -77,6 +80,7 @@
   "Restore with seed phrase": "Restore with seed phrase",
   "Search field for home page": "Search...",
   "Search for bills": "Search for bills...",
+  "Search results": "Search results",
   "Select date": "Select dates",
   "Select date range": "Select date range",
   "Select locale": "Select locale",
@@ -91,6 +95,7 @@
   "This information is optional but helps you to build a credit score": "This information is optional but helps you to build a credit score",
   "To the order of": "To the order of",
   "Try searching another contact": "Try searching another contact",
+  "Try searching for": "Try searching for",
   "Unlock with PIN": "Unlock with PIN",
   "Unlock with PIN code": "Unlock with PIN code",
   "Upload document": "Upload document",
