chore: trigger search request

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -4,7 +4,6 @@
   "Against the sum of": "Against the sum of",
   "Against this bill of exchange": "Against this bill of exchange",
   "All": "All",
-  "All contacts": "All contacts",
   "Authorised signer": "Authorised signer",
   "Bill issuer": "Bill issuer",
   "Bills": "Bills",
@@ -70,8 +69,6 @@
   "Preview": "Preview",
   "Preview company": "Preview company",
   "Preview identity": "Preview identity",
-  "Recent": "Recent",
-  "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
   "Registration date": "Registration date",
   "Registration date (MM/DD/YYYY)": "Registration date (MM/DD/YYYY)",
@@ -80,7 +77,6 @@
   "Restore with seed phrase": "Restore with seed phrase",
   "Search field for home page": "Search...",
   "Search for bills": "Search for bills...",
-  "Search results": "Search results",
   "Select date": "Select dates",
   "Select date range": "Select date range",
   "Select locale": "Select locale",
@@ -95,7 +91,6 @@
   "This information is optional but helps you to build a credit score": "This information is optional but helps you to build a credit score",
   "To the order of": "To the order of",
   "Try searching another contact": "Try searching another contact",
-  "Try searching for": "Try searching for",
   "Unlock with PIN": "Unlock with PIN",
   "Unlock with PIN code": "Unlock with PIN code",
   "Upload document": "Upload document",
@@ -412,6 +407,20 @@
   "home.recentBills": "Recent bills",
   "home.recentBills.cashflow": "Cashflow",
   "home.recentBills.list": "Bill list",
+  "home.search.filter.all.label": "All",
+  "home.search.filter.bill.label": "Bills",
+  "home.search.filter.company.label": "Companies",
+  "home.search.filter.contact.label": "Contacts",
+  "home.search.preview.bill.label": "Bill",
+  "home.search.preview.contact.in_contacts.label": "In contacts",
+  "home.search.preview.contact.type.company.label": "Company",
+  "home.search.preview.contact.type.person.label": "Contact",
+  "home.search.recent.title": "Recent",
+  "home.search.results.no_results.text": "No results",
+  "home.search.results.title": "Search results",
+  "home.search.suggestion.all_contacts.label": "All contacts",
+  "home.search.suggestion.recent_bills.label": "Recent bills",
+  "home.search.suggestion.title": "Try searching for",
   "identity.address": "Street address",
   "identity.city": "City",
   "identity.city_of_birth": "City of birth",
