chore: fix bill creation flow

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -134,9 +134,20 @@
   "bill.card.payer": "Payer",
   "bill.card.placeOfPayment": "Place of payment",
   "bill.card.status": "Status:",
+  "bill.create.billOfExchange": "Against this bill of exchange",
+  "bill.create.invoice.noProtest": "No protest.",
+  "bill.create.invoice.valueReceived": "Value received.",
+  "bill.create.issuance.cancel": "Cancel",
+  "bill.create.issuance.confirm": "Confirm",
+  "bill.create.issuance.title": "Issuance",
   "bill.create.orderOf": "to the order of",
-  "bill.create.payee": "Payee",
+  "bill.create.payOn": "pay on",
   "bill.create.payer": "Payer",
+  "bill.create.payment.place.cancel": "Cancel",
+  "bill.create.payment.place.confirm": "Confirm",
+  "bill.create.payment.place.edit": "Edit",
+  "bill.create.payment.place.title": "Place of payment",
+  "bill.create.preview": "Preview",
   "bill.create.preview.details.billOfExchange": "Against this bill of exchange",
   "bill.create.preview.details.drawer": "Drawer",
   "bill.create.preview.details.noProtest": "No protest.",
@@ -145,8 +156,11 @@
   "bill.create.preview.details.placeOfPayment": "Place of payment",
   "bill.create.preview.details.sum": "The sum of",
   "bill.create.preview.details.toTheOrderOf": "To the order of",
+  "bill.create.preview.details.valueReceived": "Value received.",
   "bill.create.preview.error": "Error",
   "bill.create.preview.error.description": "Error while creating bill. Please review the information and try again.",
+  "bill.create.sign": "Sign",
+  "bill.create.title": "Draw bill",
   "bill.endorse.endorsee": "Endorsee",
   "bill.endorse.sign": "Are you sure?",
   "bill.endorse.sign.cancel": "Cancel",
@@ -249,6 +263,7 @@
   "bills.create.payment.cancel": "Cancel",
   "bills.create.payment.confirm": "Confirm",
   "bills.create.payment.edit": "Edit",
+  "bills.create.payment.place": "Place of payment",
   "bills.create.payment.title": "Place of payment",
   "bills.create.preview": "Preview",
   "bills.create.preview.details.valueReceived": "Value received.",
