--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -134,13 +134,16 @@
   "bill.card.payer": "Payer",
   "bill.card.placeOfPayment": "Place of payment",
   "bill.card.status": "Status:",
+  "bill.create.address.missing": "Missing address",
   "bill.create.billOfExchange": "Against this bill of exchange",
   "bill.create.discount": "Calculate discount",
+  "bill.create.identity.switch": "Switch identity",
   "bill.create.invoice.noProtest": "No protest.",
   "bill.create.invoice.valueReceived": "Value received.",
   "bill.create.issuance.cancel": "Cancel",
   "bill.create.issuance.confirm": "Confirm",
   "bill.create.issuance.title": "Issuance",
+  "bill.create.issuer": "Issuer",
   "bill.create.orderOf": "to the order of",
   "bill.create.payOn": "pay on",
   "bill.create.payer": "Payer",
@@ -162,6 +165,7 @@
   "bill.create.preview.error.description": "Error while creating bill. Please review the information and try again.",
   "bill.create.sign": "Sign",
   "bill.create.title": "Draw bill",
+  "bill.create.type": "Type of bill",
   "bill.endorse.endorsee": "Endorsee",
   "bill.endorse.sign": "Are you sure?",
   "bill.endorse.sign.cancel": "Cancel",
