chore: general adjustments for routes

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -153,16 +153,8 @@
   "bill.create.payment.place.title": "Place of payment",
   "bill.create.preview": "Preview",
   "bill.create.preview.details.billOfExchange": "Against this bill of exchange",
-  "bill.create.preview.details.drawer": "Drawer",
   "bill.create.preview.details.noProtest": "No protest.",
-  "bill.create.preview.details.payOn": "Pay on",
-  "bill.create.preview.details.payer": "Payer",
-  "bill.create.preview.details.placeOfPayment": "Place of payment",
-  "bill.create.preview.details.sum": "The sum of",
-  "bill.create.preview.details.toTheOrderOf": "To the order of",
   "bill.create.preview.details.valueReceived": "Value received.",
-  "bill.create.preview.error": "Error",
-  "bill.create.preview.error.description": "Error while creating bill. Please review the information and try again.",
   "bill.create.sign": "Sign",
   "bill.create.title": "Draw bill",
   "bill.create.type": "Type of bill",
@@ -245,39 +237,17 @@
   "bill.view.details.billOfExchange": "Against this bill of exchange",
   "bill.view.details.drawer": "Drawer",
   "bill.view.details.endorsements": "Endorsements",
-  "bill.view.details.noProtest": "No protest. Value received.",
+  "bill.view.details.noProtest": "No protest.",
   "bill.view.details.payOn": "Pay on",
   "bill.view.details.payer": "Payer",
   "bill.view.details.placeOfPayment": "Place of payment",
   "bill.view.details.status": "Status:",
   "bill.view.details.sum": "The sum of",
   "bill.view.details.toTheOrderOf": "To the order of",
-  "bills.create.billOfExchange": "Against this bill of exchange",
-  "bills.create.discount": "Calculate discount",
+  "bill.view.details.valueReceived": "Value received.",
   "bills.create.edit": "Edit",
-  "bills.create.issuance.cancel": "Cancel",
-  "bills.create.issuance.confirm": "Confirm",
-  "bills.create.issuance.title": "Issuance",
-  "bills.create.issuer": "Issuer",
-  "bills.create.noProtest": "No protest.",
-  "bills.create.orderOf": "to the order of",
-  "bills.create.payOn": "pay on",
-  "bills.create.payee": "Payee",
-  "bills.create.payer": "Payer",
-  "bills.create.payment": "Place of payment",
-  "bills.create.payment.cancel": "Cancel",
-  "bills.create.payment.confirm": "Confirm",
-  "bills.create.payment.edit": "Edit",
   "bills.create.payment.place": "Place of payment",
-  "bills.create.payment.title": "Place of payment",
-  "bills.create.preview": "Preview",
-  "bills.create.preview.details.valueReceived": "Value received.",
-  "bills.create.sign": "Sign",
   "bills.create.sumOf": "the sum of",
-  "bills.create.switchIdentity": "Switch identity",
-  "bills.create.title": "Draw bill",
-  "bills.create.type": "Type of bill",
-  "bills.create.valueReceived": "Value received.",
   "bills.list.dateRange": "Date range",
   "bills.list.earlier": "Earlier",
   "bills.list.maturity": "Maturity",
