chore: currency display on some places

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -156,6 +156,8 @@
   "bill.create.preview.details.noProtest": "No protest.",
   "bill.create.preview.details.valueReceived": "Value received.",
   "bill.create.sign": "Sign",
+  "bill.create.sign.cancel": "Cancel",
+  "bill.create.sign.confirm": "Confirm",
   "bill.create.title": "Draw bill",
   "bill.create.type": "Type of bill",
   "bill.endorse.endorsee": "Endorsee",
@@ -273,6 +275,7 @@
   "company.create.requiredInformation.description": "Please enter the required data to create a new company identity",
   "company.create.requiredInformation.title": "Company identity",
   "company.create.sign": "Sign",
+  "company.create.sign.cancel": "Cancel",
   "company.create.sign.confirm": "Confirm",
   "company.create.success.description": "We have successfully created your company and can add other signers",
   "company.create.success.finish": "Finish",
@@ -356,7 +359,6 @@
   "contacts.create.requiredInformation.nodeId": "Node ID",
   "contacts.create.requiredInformation.personalName": "Legal full name",
   "contacts.create.requiredInformation.title": "Required",
-  "contacts.create.sign.cancel": "Cancel",
   "contacts.create.switchToCompany": "Company",
   "contacts.create.switchToMint": "Mint",
   "contacts.create.switchToPerson": "Person",
