feat:  Integrate search component on Home screen (#213)
* chore: add value, onBlur, onFocus to search input

* chore: add search endpoint

* chore: add search service

* chore: add className to contact icon

* chore: add HomeSearch component

* chore: handle esc pressed in search mode

* chore: trigger search request

* chore: link to bills and contacts

* chore: register mock

* chore: temporarily hide recent contacts on home search screen

* fix: initial state of filter types

* chore: show search results title when loading

* chore: take search mock data from db

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -407,6 +407,20 @@
   "home.recentBills": "Recent bills",
   "home.recentBills.cashflow": "Cashflow",
   "home.recentBills.list": "Bill list",
+  "home.search.filter.all.label": "All",
+  "home.search.filter.bill.label": "Bills",
+  "home.search.filter.company.label": "Companies",
+  "home.search.filter.contact.label": "Contacts",
+  "home.search.preview.bill.label": "Bill",
+  "home.search.preview.contact.in_contacts.label": "In contacts",
+  "home.search.preview.contact.type.company.label": "Company",
+  "home.search.preview.contact.type.person.label": "Contact",
+  "home.search.recent.title": "Recent",
+  "home.search.results.no_results.text": "No results",
+  "home.search.results.title": "Search results",
+  "home.search.suggestion.all_contacts.label": "All contacts",
+  "home.search.suggestion.recent_bills.label": "Recent bills",
+  "home.search.suggestion.title": "Try searching for",
   "identity.address": "Street address",
   "identity.city": "City",
   "identity.city_of_birth": "City of birth",
