chore: more fix around

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -306,7 +306,7 @@
   "contact.view.delete.confirm": "Delete",
   "contact.view.delete.description": "You can always re-add a contact later",
   "contact.view.delete.title": "Are you sure?",
-  "contacts.address": "Street address",
+  "contacts.address": "Postal address",
   "contacts.city": "City",
   "contacts.company.city": "City of registration",
   "contacts.company.cityOfRegistration": "City of registration",
