--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -130,6 +130,24 @@
   "bill.card.payer": "Payer",
   "bill.card.placeOfPayment": "Place of payment",
   "bill.card.status": "Status:",
+  "bill.create.address.missing": "Missing address",
+  "bill.create.billOfExchange": "Against this bill of exchange",
+  "bill.create.discount": "Calculate discount",
+  "bill.create.identity.switch": "Switch identity",
+  "bill.create.invoice.noProtest": "No protest.",
+  "bill.create.invoice.valueReceived": "Value received.",
+  "bill.create.issuance.cancel": "Cancel",
+  "bill.create.issuance.confirm": "Confirm",
+  "bill.create.issuance.title": "Issuance",
+  "bill.create.issuer": "Issuer",
+  "bill.create.orderOf": "to the order of",
+  "bill.create.payOn": "pay on",
+  "bill.create.payer": "Payer",
+  "bill.create.payment.place.cancel": "Cancel",
+  "bill.create.payment.place.confirm": "Confirm",
+  "bill.create.payment.place.edit": "Edit",
+  "bill.create.payment.place.title": "Place of payment",
+  "bill.create.preview": "Preview",
   "bill.create.preview.details.billOfExchange": "Against this bill of exchange",
   "bill.create.preview.details.drawer": "Drawer",
   "bill.create.preview.details.noProtest": "No protest.",
@@ -138,8 +156,14 @@
   "bill.create.preview.details.placeOfPayment": "Place of payment",
   "bill.create.preview.details.sum": "The sum of",
   "bill.create.preview.details.toTheOrderOf": "To the order of",
+  "bill.create.preview.details.valueReceived": "Value received.",
   "bill.create.preview.error": "Error",
   "bill.create.preview.error.description": "Error while creating bill. Please review the information and try again.",
+  "bill.create.sign": "Sign",
+  "bill.create.sign.cancel": "Cancel",
+  "bill.create.sign.confirm": "Confirm",
+  "bill.create.title": "Draw bill",
+  "bill.create.type": "Type of bill",
   "bill.endorse.endorsee": "Endorsee",
   "bill.endorse.sign": "Are you sure?",
   "bill.endorse.sign.cancel": "Cancel",
@@ -225,13 +249,14 @@
   "bill.view.details.billOfExchange": "Against this bill of exchange",
   "bill.view.details.drawer": "Drawer",
   "bill.view.details.endorsements": "Endorsements",
-  "bill.view.details.noProtest": "No protest. Value received.",
+  "bill.view.details.noProtest": "No protest.",
   "bill.view.details.payOn": "Pay on",
   "bill.view.details.payer": "Payer",
   "bill.view.details.placeOfPayment": "Place of payment",
   "bill.view.details.status": "Status:",
   "bill.view.details.sum": "The sum of",
   "bill.view.details.toTheOrderOf": "To the order of",
+  "bill.view.details.valueReceived": "Value received.",
   "bills.create.billOfExchange": "Against this bill of exchange",
   "bills.create.discount": "Calculate discount",
   "bills.create.edit": "Edit",
@@ -248,6 +273,7 @@
   "bills.create.payment.cancel": "Cancel",
   "bills.create.payment.confirm": "Confirm",
   "bills.create.payment.edit": "Edit",
+  "bills.create.payment.place": "Place of payment",
   "bills.create.payment.title": "Place of payment",
   "bills.create.preview": "Preview",
   "bills.create.preview.details.valueReceived": "Value received.",
@@ -282,6 +308,8 @@
   "company.create.requiredInformation.description": "Please enter the required data to create a new company identity",
   "company.create.requiredInformation.title": "Company identity",
   "company.create.sign": "Sign",
+  "company.create.sign.cancel": "Cancel",
+  "company.create.sign.confirm": "Confirm",
   "company.create.success.description": "We have successfully created your company and can add other signers",
   "company.create.success.finish": "Finish",
   "company.create.success.title": "Success",
@@ -292,6 +320,7 @@
   "company.name": "Legal company name",
   "company.preview.description": "Please check your company data before signing",
   "company.preview.title": "Preview company",
+  "company.proof_of_registration": "Registration document",
   "company.registration_date": "Registration date",
   "company.registration_number": "Registration number",
   "company.signer.add": "Add authorized signer",
@@ -305,23 +334,29 @@
   "company.view.signers": "Edit authorized signers",
   "company.view.title": "Company details",
   "company.zip": "Zip code",
-  "contact.create.success": "Contact created successfully",
   "contact.view.delete": "Delete contact",
   "contact.view.delete.cancel": "Cancel",
   "contact.view.delete.confirm": "Delete",
   "contact.view.delete.description": "You can always re-add a contact later",
   "contact.view.delete.title": "Are you sure?",
-  "contacts.address": "Street address",
+  "contacts.address": "Postal address",
   "contacts.city": "City",
+  "contacts.company.city": "City of registration",
   "contacts.company.cityOfRegistration": "City of registration",
+  "contacts.company.country": "Country of registration",
   "contacts.company.countryOfRegistration": "Country of registration",
+  "contacts.company.date": "Date of registration",
   "contacts.company.dateOfRegistration": "Date of registration",
+  "contacts.company.document": "Registration document",
   "contacts.company.email": "Company email",
+  "contacts.company.identificationNumber": "Registration number",
   "contacts.company.name": "Legal company name",
   "contacts.company.registrationDocument": "Registration document",
   "contacts.company.registrationNumber": "Registration number",
+  "contacts.company.uploadDocument": "Upload registration document",
   "contacts.country": "Country",
   "contacts.create": "New contact",
+  "contacts.create.continue": "Continue",
   "contacts.create.optionalInformation.cityOfBirth": "City of birth",
   "contacts.create.optionalInformation.cityOfRegistration": "City of registration",
   "contacts.create.optionalInformation.continue": "Continue",
@@ -351,7 +386,6 @@
   "contacts.create.preview.registrationNumber": "Registration number",
   "contacts.create.preview.save": "Save",
   "contacts.create.preview.socialSecurityNumber": "Social security number",
-  "contacts.create.preview.title": "Preview",
   "contacts.create.requiredInformation.companyName": "Legal company name",
   "contacts.create.requiredInformation.continue": "Continue",
   "contacts.create.requiredInformation.description": "This information is required for bill counterparties",
@@ -361,6 +395,9 @@
   "contacts.create.switchToCompany": "Company",
   "contacts.create.switchToMint": "Mint",
   "contacts.create.switchToPerson": "Person",
+  "contacts.create.type.company": "Company",
+  "contacts.create.type.mint": "Mint",
+  "contacts.create.type.person": "Person",
   "contacts.edit": "Edit contact",
   "contacts.edit.cancel": "Cancel",
   "contacts.edit.save": "Save",
@@ -370,13 +407,19 @@
   "contacts.list.create": "New contact",
   "contacts.list.title": "Contacts",
   "contacts.nodeId": "Node ID",
+  "contacts.person.city": "City of birth",
   "contacts.person.cityOfBirth": "City of birth",
+  "contacts.person.country": "Country of birth",
   "contacts.person.countryOfBirth": "Country of birth",
+  "contacts.person.date": "Date of birth",
   "contacts.person.dateOfBirth": "Date of birth",
+  "contacts.person.document": "Identity document",
   "contacts.person.email": "Email address",
+  "contacts.person.identificationNumber": "Social security number",
   "contacts.person.identityDocument": "Identity document",
   "contacts.person.identityNumber": "Social security number",
   "contacts.person.name": "Legal full name",
+  "contacts.person.uploadDocument": "Upload identity document",
   "contacts.select.details.select": "Select",
   "contacts.select.title": "Select contact",
   "contacts.view.title": "View contact",
