chore: exit application on press of exit button

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -565,6 +565,10 @@
   "settings.backup.download": "Backup data",
   "settings.displayCurrency": "Display currency",
   "settings.displayCurrency.title": "Display currency",
+  "settings.exit.cancel": "Cancel",
+  "settings.exit.confirm": "Confirm",
+  "settings.exit.description": "This will exit the application.",
+  "settings.exit.title": "Are you sure?",
   "settings.languagePreference": "Language",
   "settings.languagePreference.title": "Language preference",
   "settings.legal": "Legal",
