chore: ability to sort endorsements

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -172,7 +172,8 @@
   "bill.endorse.termsAndConditions": "I agree to the Terms and conditions",
   "bill.endorsement.payee": "Pay to the order of",
   "bill.endorsement.signer": "Signed",
-  "bill.endorsements.sort": "Newest",
+  "bill.endorsements.sort.timestamp.asc": "Oldest",
+  "bill.endorsements.sort.timestamp.desc": "Newest",
   "bill.endorsements.title": "Endorsements",
   "bill.mint.cancel": "Cancel mint request",
   "bill.mint.preview.forTheSumOf": "for the sum of",
