fix: suspense issues

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -246,6 +246,7 @@
   "bill.status.pending_acceptance": "Pending acceptance",
   "bill.status.pending_payment": "Pending payment",
   "bill.status.rejected": "Rejected",
+  "bill.status.unaccepted": "Unaccepted",
   "bill.status.unpaid": "Unpaid",
   "bill.view.details.billOfExchange": "Against this bill of exchange",
   "bill.view.details.drawer": "Drawer",
@@ -397,7 +398,6 @@
   "contacts.create.switchToMint": "Mint",
   "contacts.create.switchToPerson": "Person",
   "contacts.create.type.company": "Company",
-  "contacts.create.type.mint": "Mint",
   "contacts.create.type.person": "Person",
   "contacts.edit": "Edit contact",
   "contacts.edit.cancel": "Cancel",
