feat: add shutdown complete page

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -608,6 +608,11 @@
   "settings.security.resetApp": "Reset app",
   "settings.security.resetAppDescription": "Remove identity",
   "settings.security.title": "Security",
+  "settings.shutdown.complete.description": "The application has been shut down.",
+  "settings.shutdown.complete.instruction.text": "You can now close the browser window.",
+  "settings.shutdown.complete.title": "Shutdown complete.",
+  "settings.shutdown.error.description": "Failed to shutdown the application. Please try again.",
+  "settings.shutdown.error.title": "Error!",
   "settings.theme": "Theme",
   "settings.theme.dark": "Dark",
   "settings.theme.light": "Light",
