feat: add active section in notification screen

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -539,6 +539,8 @@
   "identity.restore.paste": "Paste from clipboard",
   "identity.view": "View",
   "identity.zip": "Zip code",
+  "notifications.active.empty.description": "Perfect!",
+  "notifications.active.empty.title": "No active notifications",
   "notifications.empty.description": "Start creating a bill and distribute it to your contacts",
   "notifications.empty.issueBill": "Issue bill",
   "notifications.empty.title": "No notifications",
@@ -549,6 +551,7 @@
   "notifications.filter.recourse": "Recourse",
   "notifications.history.collapse": "Collapse history",
   "notifications.history.view": "See history",
+  "notifications.list.active": "Active",
   "notifications.list.history": "History",
   "notifications.list.title": "Notifications",
   "notifications.list.today": "Today",
