--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -565,6 +565,11 @@
   "page.chartflow.chart.projection.label": "Projection",
   "page.chartflow.chart.text_empty": "No data available",
   "page.chartflow.chart.title": "Cash flow",
+  "page.error.button.text": "Take me back to safety!",
+  "page.error.description.text": "There has been an application error.",
+  "page.error.reason.title": "Reason",
+  "page.error.reason.unknown.text": "Unknown error.",
+  "page.error.title": "Error : (",
   "pages.identityCreation.createNewIdentity.subtitle": "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval",
   "pages.identityCreation.createNewIdentity.title": "Encrypted data",
   "pages.onboarding.emailVerification.continue": "Continue",
